Fix layout shifts while watch page is loading

--- a/insidious/style/main.css
+++ b/insidious/style/main.css
@@ -319,8 +319,13 @@ img {
     display: grid;
     grid-template-columns: 1fr var(--side);
     grid-template-rows: repeat(4, min-content);
-    align-content: center;
     gap: var(--gap);
+
+    & #player-area {
+        /* Prevent layout shift while video is loading */
+        min-width: 100%;
+        max-width: 100%;
+    }
 
     & #video-info {
         grid-column: 1;
